--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 
 [dependencies]
 m3u8-rs = "1.0.7"
-tokio = { version = "0.2.22", features = ["macros", "fs", "io-util", "blocking"] }
+tokio = { version = "0.2.22", features = ["macros", "fs", "io-util", "blocking", "sync"] }
 futures = "0.3.5"
 reqwest = { version = "0.10.7", features = ["socks"] }
 once_cell = "1.4.0"
